--- a/style.css
+++ b/style.css
@@ -28,10 +28,18 @@ h1{
     color: transparent;
 }
 
+#vol {
+    margin-top: 4rem;
+    margin-left: 50rem;
+}
+
+#vol img{
+    width: 20px;
+    height: 20px;
+}
 
 span{
     font-weight: bold;
-    /* color: #fff000; */
 }
 
 .countdown-container{
@@ -58,6 +66,9 @@ span{
 @media screen and (max-width: 492px) {
     h1{
         margin-top: 4rem;
+    }
+    #vol {
+        margin-top: 2rem;
     }
 }
 
