--- a/style.css
+++ b/style.css
@@ -1,91 +1,86 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;600&family=Roboto:wght@400;700&display=swap");
 
-*{
-    box-sizing: border-box;
+* {
+  box-sizing: border-box;
 }
 
-body{
-    background-image: url(https://images.unsplash.com/photo-1593435713463-e8bf5bea9786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjl8fHNub3d8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=600&q=60);
-    background-size: cover;
-    background-position: center center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    min-height: 100vh;
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
+body {
+  background-image: url(https://images.unsplash.com/photo-1593435713463-e8bf5bea9786?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mjl8fHNub3d8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=600&q=60);
+  background-size: cover;
+  background-position: center center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  min-height: 100vh;
+  font-family: "Poppins", sans-serif;
+  margin: 0;
 }
 
-h1{
-    text-align: center;
-    font-weight: bold;
-    font-size: 4rem;
-    margin-top: 5rem;
-    background-image: url(https://plus.unsplash.com/premium_photo-1670157709475-804e923487fb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Q09MT1VSU3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=1000&q=60);
-    background-size: cover;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+h1 {
+  text-align: center;
+  font-weight: bold;
+  font-size: 4rem;
+  margin-top: 3rem;
+  background-image: url(https://plus.unsplash.com/premium_photo-1670157709475-804e923487fb?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Q09MT1VSU3xlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=1000&q=60);
+  background-size: cover;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
 }
 
-#vol {
-    margin-top: 4rem;
-    margin-left: 50rem;
+img {
+  margin-top: 0.5rem;
+  width: 30px;
 }
 
-img{
-    width: 30px;
+span {
+  font-weight: bold;
 }
 
-span{
-    font-weight: bold;
+.countdown-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-.countdown-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.big-text{
-    font-weight: bold;
-    font-size: 6rem;
-    line-height: 1;
-    margin: 1rem 2rem;
+.big-text {
+  font-weight: bold;
+  font-size: 6rem;
+  line-height: 1;
+  margin: 1rem 2rem;
 }
 
 .countdown-el {
-    text-align: center;
+  text-align: center;
 }
 
-.countdown-el span{
-    font-size: 1.3rem;
+.countdown-el span {
+  font-size: 1.3rem;
 }
 
 @media screen and (max-width: 492px) {
-    h1{
-        margin-top: 4rem;
-    }
-    #vol {
-        margin-top: 2rem;
-    }
+  h1 {
+    margin-top: 4rem;
+  }
+  #vol {
+    margin-top: 2rem;
+  }
 }
 
 @media screen and (max-width: 372px) {
-    h1{
-        font-size: 4rem;
-        margin-top: 1.5rem;
-    }
-    
-    .countdown-container{
-        flex-direction: column;
-    }
+  h1 {
+    font-size: 4rem;
+    margin-top: 1.5rem;
+  }
 
-    .big-text{
-        font-weight: bold;
-        font-size: 5rem;
-        line-height: 1;
-        margin: 1rem 2rem;
-    }
-    
+  .countdown-container {
+    flex-direction: column;
+  }
+
+  .big-text {
+    font-weight: bold;
+    font-size: 5rem;
+    line-height: 1;
+    margin: 1rem 2rem;
+  }
 }
